# gpuwu

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  index.html  loftofold.txt  run.sh  shell.nix
.direnv/: nix-profile-pre503161.b6cc7ff8fee  nix-profile-pre503161.b6cc7ff8fee.rc
src/: .main.rs.rustfmt  camera.rs  lib.rs  main.rs  model.rs  render.rs  resources.rs  shader.wgsl  text.rs  text_shader.wgsl  texture.rs
