[package]
name = "gpuwu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = "*"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

